gcc/testsuite/rust/rustc/ui/unsafe/unsafe-fn-deref-ptr.rs
fn f(p: *const u8) -> u8 {
    return *p; // { dg-error ".E0133." "" { target *-*-* } }
}

fn main() {
}

